# nix-deploy

./: .gitignore  CHANGELOG.md  README.md  default.nix  nix-deploy.cabal  release.nix  shell.nix
.github/workflows/: ci.yml
nix/: 17_09.nix  fetchNixpkgs.nix  nix-deploy.nix  nixpkgs.nix  options.nix  optparse-generic.nix  turtle.nix
src/: Main.hs
