name:                nix-deploy
version:             1.0.4
synopsis:            Deploy Nix-built software to a NixOS machine
homepage:            https://github.com/awakesecurity/nix-deploy#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Awake Networks
maintainer:          opensource@awakenetworks.com
copyright:           2017 Awake Networks
category:            System
build-type:          Simple
cabal-version:       >=1.10

description:

  Deploy a NixOS system configuration with @nix-deploy system ...@ to
  a remote machine and switch the machine to that system
  configuration. You can also deploy a nix store path with @nix-deploy
  path ...@ to a remote machine or from a remote machine.
  .
  This tool is often used in conjunction with <https://github.com/awakesecurity/nix-delegate nix-delegate>.

extra-source-files:
    LICENSE
    README.md
    CHANGELOG.md

executable nix-deploy
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:
                base                 >= 4.9.0.0  && < 5
              , bytestring           >= 0.10.8.1 && < 1.0
              , optparse-generic     >= 1.2.0    && < 1.4
              , optparse-applicative >= 0.13.0.0 && < 0.15
              , neat-interpolation                  < 0.4
              , text                 >= 0.7      && < 1.3
              , turtle               >= 1.3.6    && < 1.6
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/awakesecurity/nix-deploy.git
